log/build_2021-11-14_22-56-08/client/stderr.log
  File "/home/dave/team/test_ws/install/client/lib/python3.6/site-packages/client/client_node_setter.py", line 43
    else:
       ^
SyntaxError: invalid syntax

